syntax = "proto3";

service Applications {
  rpc findAll (AccountIdRequest) returns (ApplicationsResponse) {}
  rpc findOne (ApplicationIdRequest) returns (ApplicationResponse) {}
  rpc create (ApplicationRequest) returns (Empty) {}
  rpc update (ApplicationRequest) returns (Empty) {}
  rpc destroy (ApplicationIdRequest) returns (Empty) {}
}

service Clients {
  rpc findAll(FindAllClientsRequest) returns (ClientsResponse) {}
  rpc findOne(ClientIdRequest) returns (ClientResponse) {}
}

service Events {
  rpc findAll(FindAllEventsRequest) returns (EventsResponse) {}
}

service Sessions {
  rpc findAll(FindAllSessionsRequest) returns (SessionsResponse) {}
}

// Generics

message Empty {}

// Requests

message AccountIdRequest {
  string account_id = 1;
}

message ApplicationIdRequest {
  string account_id = 1;
  string application_id = 2;
}

message ApplicationRequest {
  string account_id = 1;
  string application_id = 2;
  string title = 3;
  int32 session_timeout = 4;
}

message ClientIdRequest {
  string account_id = 1;
  string application_id = 2;
  string client_id = 3;
}

message FindAllClientsRequest {
  string account_id = 1;
  optional int32 limit = 2;
  optional string application_id = 3;
  optional ClientCursor cursor = 4;
}

message FindAllEventsRequest {
  string account_id = 1;
  optional int32 limit = 2;
  optional string application_id = 3;
  optional string client_id = 4;
  optional EventCursor cursor = 5;
}

message FindAllSessionsRequest {
  string account_id = 1;
  optional int32 limit = 2;
  optional string application_id = 3;
  optional string client_id = 4;
  optional SessionCursor cursor = 5;
}

// Responses

message ApplicationResponse {
  Application row = 1;
}

message ApplicationsResponse {
  repeated Application rows = 1;
}

message ClientsResponse {
  repeated Client rows = 1;
  optional ClientCursor cursor = 2;
}

message ClientResponse {
  Client row = 1;
}

message EventsResponse {
  repeated Event rows = 1;
  optional EventCursor cursor = 2;
}

message SessionsResponse {
  repeated Session rows = 1;
  optional SessionCursor cursor = 2;
}

// Model definitions

message Application {
  string account_id = 1;
  string application_id = 2;
  string title = 3;
  bytes authorization_key = 4;
  bytes application_key = 5;
  bytes server_key = 6;
  int32 session_timeout = 7;
  bool is_active = 8;
  string created_at = 9;
  string updated_at = 10;
}

message Client {
  string account_id = 1;
  string application_id = 2;
  string client_id = 3;
  optional string distinct_id = 4;
  string country_id = 5;
  string device_locale = 6;
  string device_manufacturer = 7;
  string device_platform = 8;
  string device_type = 9;
  int32 device_height = 10;
  int32 device_width = 11;
  optional string device_carrier = 12;
  string os_name = 13;
  optional string watch_model = 14;
  int32 application_build_number = 15;
  string application_version = 16;
  string library_version = 17;
  optional string push_token = 18;
  bool is_push_token_valid = 19;
  bool is_opt_out = 20;
  repeated CustomProperties additional_properties = 21;
  string created_at = 22;
  string updated_at = 23;
}

message Event {
  string account_id = 1;
  string application_id = 2;
  string client_id = 3;
  string title = 4;
  repeated CustomProperties properties = 5;
  string session_started_at = 6;
  string created_at = 7;
}

message CustomProperties {
  string key = 1;
  string value = 2;
}

message Session {
  string account_id = 1;
  string application_id = 2;
  string client_id = 3;
  string started_at = 4;
  string expired_at = 5;
}

// Cursors

message EventCursor {
  string created_at = 1;
}

message SessionCursor {
  string expired_at = 1;
}

message ClientCursor {
  string created_at = 2;
}
